test_data/end_to_end/err__ty_param_count_method/stderr.txt
error: can't infer type
  --> main.cz:7:7
7 |     s.foo();
          ~~~

error: wrong number of type arguments: expected 1, found 0
  --> main.cz:8:10
8 |     s.foo<>();
             ~~

error: wrong number of type arguments: expected 1, found 2
  --> main.cz:9:10
9 |     s.foo<char, bool>();
             ~~~~~~~~~~~~
